@@ -25,7 +25,17 @@
  * @param string Snmp especific OID.
  */
 function snmp_generate_trap($snmp_host_address, $snmp_community, $snmp_oid, $snmp_agent, $snmp_data, $snmp_type) {
-	system("snmptrap -v 1 -c $snmp_community $snmp_host_address $snmp_oid $snmp_agent $snmp_type $snmp_data 0");
+	$command = "snmptrap -v 1 -c $snmp_community $snmp_host_address $snmp_oid $snmp_agent $snmp_type $snmp_data 0 2>&1";
+	
+	$output = null;
+	exec($command, $output, $return);
+	
+	if ($return == 0) {
+		return true;
+	}
+	else {
+		return implode(' ', $output);
+	}
 }
 
 ?>
